# FIT-parallel-programming

./: README.md
lab1/: CMakeLists.txt  var1.c  var2.c
lab2/: CMakeLists.txt  var1.c  var2.c
lab3/: CMakeLists.txt  main.c
lab4/: CMakeLists.txt  main.c
lab5/: CMakeLists.txt  main.cpp
lab5/balance/: balance.cpp  balance.h
lab5/execution/: execution.cpp  execution.h
lab5/info/: info.h
lab5/threadArgs/: threadArgs.h
